Created components at Fav and line page + fetch REST API /lines

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -3,5 +3,9 @@
   "integrations": {
     "cordova": {}
   },
-  "type": "angular"
+  "type": "angular",
+  "proxies": [{
+        "path": "/api",
+        "proxyUrl": "http://test-env.dvjtpw52wm.us-east-1.elasticbeanstalk.com/"
+    }]
 }
